# blurSkin

./: CMakeLists.txt  blurSkinCmd.cpp  blurSkinCmd.h  blurSkinEdit.cpp  blurSkinEdit.h  blurSkinPlugin.cpp  functions.cpp  functions.h  pointsDisplay.cpp  pointsDisplay.h  testSetColors.py
src/: blurSkinCmd.cpp  blurSkinEdit.cpp  functions.cpp  functions.h  pointsDisplay.h
